# okcfp-tla-plus-haskell

./: CHANGELOG.org  README.org  okcfp-tla-plus-haskell.cabal
models/: ---- MODULE squares ----.tla  PingSync.tla
models/PingSync.toolbox/: .project  PingSync___PingSync.launch  PingSync___PingSync_SnapShot_1658011409583.launch  PingSync___PingSync_SnapShot_1658011469527.launch  PingSync___PingSync_SnapShot_1659410446821.launch
models/PingSync.toolbox/PingSync/: MC.cfg  MC.tla  MC_TE.out  PingSync.tla
models/PingSync.toolbox/PingSync_SnapShot_1658011409583/: MC.cfg  MC.tla  MC_TE.out  PingSync.tla
models/PingSync.toolbox/PingSync_SnapShot_1658011469527/: MC.cfg  MC.tla
models/PingSync.toolbox/PingSync_SnapShot_1659410446821/: MC.cfg  MC.tla
nix/: default.nix  shell.nix
src/: System.hs
tests/: Spec.hs
